@@ -23,6 +23,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.Modifier;
@@ -44,12 +45,12 @@ import static org.elasticsearch.compute.gen.Types.ELEMENT_TYPE;
 import static org.elasticsearch.compute.gen.Types.GROUPING_AGGREGATOR_FUNCTION;
 import static org.elasticsearch.compute.gen.Types.GROUPING_AGGREGATOR_FUNCTION_ADD_INPUT;
 import static org.elasticsearch.compute.gen.Types.INTERMEDIATE_STATE_DESC;
-import static org.elasticsearch.compute.gen.Types.INT_BLOCK;
 import static org.elasticsearch.compute.gen.Types.INT_VECTOR;
 import static org.elasticsearch.compute.gen.Types.LIST_AGG_FUNC_DESC;
 import static org.elasticsearch.compute.gen.Types.LIST_INTEGER;
+import static org.elasticsearch.compute.gen.Types.LONG_BLOCK;
+import static org.elasticsearch.compute.gen.Types.LONG_VECTOR;
 import static org.elasticsearch.compute.gen.Types.PAGE;
-import static org.elasticsearch.compute.gen.Types.SEEN_GROUP_IDS;
 import static org.elasticsearch.compute.gen.Types.blockType;
 import static org.elasticsearch.compute.gen.Types.vectorType;
 
@@ -92,10 +93,10 @@ public class GroupingAggregatorImplementer {
         this.combineIntermediate = findMethod(declarationType, "combineIntermediate");
         this.evaluateFinal = findMethod(declarationType, "evaluateFinal");
         this.valuesIsBytesRef = BYTES_REF.equals(TypeName.get(combine.getParameters().get(combine.getParameters().size() - 1).asType()));
-        this.createParameters = init.getParameters().stream().map(Parameter::from).collect(Collectors.toList());
-        if (false == createParameters.stream().anyMatch(p -> p.type().equals(BIG_ARRAYS))) {
-            createParameters.add(0, new Parameter(BIG_ARRAYS, "bigArrays"));
-        }
+        List<Parameter> createParameters = init.getParameters().stream().map(Parameter::from).toList();
+        this.createParameters = createParameters.stream().anyMatch(p -> p.type().equals(BIG_ARRAYS))
+            ? createParameters
+            : Stream.concat(Stream.of(new Parameter(BIG_ARRAYS, "bigArrays")), createParameters.stream()).toList();
 
         this.implementation = ClassName.get(
             elements.getPackageOf(declarationType).toString(),
@@ -158,10 +159,12 @@ public class GroupingAggregatorImplementer {
         builder.addMethod(intermediateStateDesc());
         builder.addMethod(intermediateBlockCount());
         builder.addMethod(prepareProcessPage());
-        builder.addMethod(addRawInputLoop(INT_VECTOR, valueBlockType(init, combine)));
-        builder.addMethod(addRawInputLoop(INT_VECTOR, valueVectorType(init, combine)));
-        builder.addMethod(addRawInputLoop(INT_BLOCK, valueBlockType(init, combine)));
-        builder.addMethod(addRawInputLoop(INT_BLOCK, valueVectorType(init, combine)));
+        builder.addMethod(addRawInputLoop(LONG_VECTOR, valueBlockType(init, combine)));
+        builder.addMethod(addRawInputLoop(LONG_VECTOR, valueVectorType(init, combine)));
+        builder.addMethod(addRawInputLoop(LONG_VECTOR, BLOCK));
+        builder.addMethod(addRawInputLoop(LONG_BLOCK, valueBlockType(init, combine)));
+        builder.addMethod(addRawInputLoop(LONG_BLOCK, valueVectorType(init, combine)));
+        builder.addMethod(addRawInputLoop(LONG_BLOCK, BLOCK));
         builder.addMethod(addIntermediateInput());
         builder.addMethod(addIntermediateRowInput());
         builder.addMethod(evaluateIntermediate());
@@ -247,24 +250,21 @@ public class GroupingAggregatorImplementer {
     private MethodSpec prepareProcessPage() {
         MethodSpec.Builder builder = MethodSpec.methodBuilder("prepareProcessPage");
         builder.addAnnotation(Override.class).addModifiers(Modifier.PUBLIC).returns(GROUPING_AGGREGATOR_FUNCTION_ADD_INPUT);
-        builder.addParameter(SEEN_GROUP_IDS, "seenGroupIds").addParameter(PAGE, "page");
+        builder.addParameter(PAGE, "page");
 
         builder.addStatement("$T uncastValuesBlock = page.getBlock(channels.get(0))", BLOCK);
-
         builder.beginControlFlow("if (uncastValuesBlock.areAllValuesNull())");
         {
-            builder.addStatement("state.enableGroupIdTracking(seenGroupIds)");
-            builder.addStatement("return $L", addInput(b -> {}));
+            builder.addStatement(
+                "return $L",
+                addInput(b -> b.addStatement("addRawInputAllNulls(positionOffset, groupIds, uncastValuesBlock)"))
+            );
         }
         builder.endControlFlow();
-
         builder.addStatement("$T valuesBlock = ($T) uncastValuesBlock", valueBlockType(init, combine), valueBlockType(init, combine));
         builder.addStatement("$T valuesVector = valuesBlock.asVector()", valueVectorType(init, combine));
         builder.beginControlFlow("if (valuesVector == null)");
         {
-            builder.beginControlFlow("if (valuesBlock.mayHaveNulls())");
-            builder.addStatement("state.enableGroupIdTracking(seenGroupIds)");
-            builder.endControlFlow();
             builder.addStatement("return $L", addInput(b -> b.addStatement("addRawInput(positionOffset, groupIds, valuesBlock)")));
         }
         builder.endControlFlow();
@@ -280,12 +280,12 @@ public class GroupingAggregatorImplementer {
         builder.addSuperinterface(GROUPING_AGGREGATOR_FUNCTION_ADD_INPUT);
 
         MethodSpec.Builder block = MethodSpec.methodBuilder("add").addAnnotation(Override.class).addModifiers(Modifier.PUBLIC);
-        block.addParameter(TypeName.INT, "positionOffset").addParameter(INT_BLOCK, "groupIds");
+        block.addParameter(TypeName.INT, "positionOffset").addParameter(LONG_BLOCK, "groupIds");
         addBlock.accept(block);
         builder.addMethod(block.build());
 
         MethodSpec.Builder vector = MethodSpec.methodBuilder("add").addAnnotation(Override.class).addModifiers(Modifier.PUBLIC);
-        vector.addParameter(TypeName.INT, "positionOffset").addParameter(INT_VECTOR, "groupIds");
+        vector.addParameter(TypeName.INT, "positionOffset").addParameter(LONG_VECTOR, "groupIds");
         addBlock.accept(vector);
         builder.addMethod(vector.build());
 
@@ -294,13 +294,23 @@ public class GroupingAggregatorImplementer {
 
     /**
      * Generate an {@code addRawInput} method to perform the actual aggregation.
-     * @param groupsType The type of the group key, always {@code IntBlock} or {@code IntVector}
+     * @param groupsType The type of the group key, always {@code LongBlock} or {@code LongVector}
      * @param valuesType The type of the values to consume, always a subclass of {@code Block} or a subclass of {@code Vector}
      */
     private MethodSpec addRawInputLoop(TypeName groupsType, TypeName valuesType) {
         boolean groupsIsBlock = groupsType.toString().endsWith("Block");
-        boolean valuesIsBlock = valuesType.toString().endsWith("Block");
+        enum ValueType {
+            VECTOR,
+            TYPED_BLOCK,
+            NULL_ONLY_BLOCK
+        }
+        ValueType valueType = valuesType.equals(BLOCK) ? ValueType.NULL_ONLY_BLOCK
+            : valuesType.toString().endsWith("Block") ? ValueType.TYPED_BLOCK
+            : ValueType.VECTOR;
         String methodName = "addRawInput";
+        if (valueType == ValueType.NULL_ONLY_BLOCK) {
+            methodName += "AllNulls";
+        }
         MethodSpec.Builder builder = MethodSpec.methodBuilder(methodName);
         builder.addModifiers(Modifier.PRIVATE);
         builder.addParameter(TypeName.INT, "positionOffset").addParameter(groupsType, "groups").addParameter(valuesType, "values");
@@ -312,29 +322,34 @@ public class GroupingAggregatorImplementer {
         builder.beginControlFlow("for (int groupPosition = 0; groupPosition < groups.getPositionCount(); groupPosition++)");
         {
             if (groupsIsBlock) {
-                // TODO we can drop this once we stop sending null group keys
                 builder.beginControlFlow("if (groups.isNull(groupPosition))");
                 builder.addStatement("continue");
                 builder.endControlFlow();
                 builder.addStatement("int groupStart = groups.getFirstValueIndex(groupPosition)");
                 builder.addStatement("int groupEnd = groupStart + groups.getValueCount(groupPosition)");
                 builder.beginControlFlow("for (int g = groupStart; g < groupEnd; g++)");
-                builder.addStatement("int groupId = Math.toIntExact(groups.getInt(g))");
+                builder.addStatement("int groupId = Math.toIntExact(groups.getLong(g))");
             } else {
-                builder.addStatement("int groupId = Math.toIntExact(groups.getInt(groupPosition))");
+                builder.addStatement("int groupId = Math.toIntExact(groups.getLong(groupPosition))");
             }
 
-            if (valuesIsBlock) {
-                builder.beginControlFlow("if (values.isNull(groupPosition + positionOffset))");
-                builder.addStatement("continue");
-                builder.endControlFlow();
-                builder.addStatement("int valuesStart = values.getFirstValueIndex(groupPosition + positionOffset)");
-                builder.addStatement("int valuesEnd = valuesStart + values.getValueCount(groupPosition + positionOffset)");
-                builder.beginControlFlow("for (int v = valuesStart; v < valuesEnd; v++)");
-                combineRawInput(builder, "values", "v");
-                builder.endControlFlow();
-            } else {
-                combineRawInput(builder, "values", "groupPosition + positionOffset");
+            switch (valueType) {
+                case VECTOR -> combineRawInput(builder, "values", "groupPosition + positionOffset");
+                case TYPED_BLOCK -> {
+                    builder.beginControlFlow("if (values.isNull(groupPosition + positionOffset))");
+                    builder.addStatement("state.putNull(groupId)");
+                    builder.addStatement("continue");
+                    builder.endControlFlow();
+                    builder.addStatement("int valuesStart = values.getFirstValueIndex(groupPosition + positionOffset)");
+                    builder.addStatement("int valuesEnd = valuesStart + values.getValueCount(groupPosition + positionOffset)");
+                    builder.beginControlFlow("for (int v = valuesStart; v < valuesEnd; v++)");
+                    combineRawInput(builder, "values", "v");
+                    builder.endControlFlow();
+                }
+                case NULL_ONLY_BLOCK -> {
+                    builder.addStatement("assert values.isNull(groupPosition + positionOffset)");
+                    builder.addStatement("state.putNull(groupPosition + positionOffset)");
+                }
             }
 
             if (groupsIsBlock) {
@@ -376,7 +391,7 @@ public class GroupingAggregatorImplementer {
         String offsetVariable
     ) {
         builder.addStatement(
-            "state.set(groupId, $T.combine(state.getOrDefault(groupId), $L.$L($L)))",
+            "state.set($T.combine(state.getOrDefault(groupId), $L.$L($L)), groupId)",
             declarationType,
             blockVariable,
             secondParameterGetter,
@@ -408,10 +423,9 @@ public class GroupingAggregatorImplementer {
         MethodSpec.Builder builder = MethodSpec.methodBuilder("addIntermediateInput");
         builder.addAnnotation(Override.class).addModifiers(Modifier.PUBLIC);
         builder.addParameter(TypeName.INT, "positionOffset");
-        builder.addParameter(INT_VECTOR, "groups");
+        builder.addParameter(LONG_VECTOR, "groups");
         builder.addParameter(PAGE, "page");
 
-        builder.addStatement("state.enableGroupIdTracking(new $T.Empty())", SEEN_GROUP_IDS);
         builder.addStatement("assert channels.size() == intermediateBlockCount()");
         int count = 0;
         for (var interState : intermediateState) {
@@ -438,7 +452,7 @@ public class GroupingAggregatorImplementer {
         }
         builder.beginControlFlow("for (int groupPosition = 0; groupPosition < groups.getPositionCount(); groupPosition++)");
         {
-            builder.addStatement("int groupId = Math.toIntExact(groups.getInt(groupPosition))");
+            builder.addStatement("int groupId = Math.toIntExact(groups.getLong(groupPosition))");
             if (hasPrimitiveState()) {
                 assert intermediateState.size() == 2;
                 assert intermediateState.get(1).name().equals("seen");
@@ -447,11 +461,13 @@ public class GroupingAggregatorImplementer {
                     var name = intermediateState.get(0).name();
                     var m = vectorAccessorName(intermediateState.get(0).elementType());
                     builder.addStatement(
-                        "state.set(groupId, $T.combine(state.getOrDefault(groupId), $L.$L(groupPosition + positionOffset)))",
+                        "state.set($T.combine(state.getOrDefault(groupId), $L.$L(groupPosition + positionOffset)), groupId)",
                         declarationType,
                         name,
                         m
                     );
+                    builder.nextControlFlow("else");
+                    builder.addStatement("state.putNull(groupId)");
                     builder.endControlFlow();
                 }
             } else {
@@ -477,7 +493,9 @@ public class GroupingAggregatorImplementer {
     private void combineStates(MethodSpec.Builder builder) {
         if (combineStates == null) {
             builder.beginControlFlow("if (inState.hasValue(position))");
-            builder.addStatement("state.set(groupId, $T.combine(state.getOrDefault(groupId), inState.get(position)))", declarationType);
+            builder.addStatement("state.set($T.combine(state.getOrDefault(groupId), inState.get(position)), groupId)", declarationType);
+            builder.nextControlFlow("else");
+            builder.addStatement("state.putNull(groupId)");
             builder.endControlFlow();
             return;
         }
@@ -494,7 +512,6 @@ public class GroupingAggregatorImplementer {
         }
         builder.endControlFlow();
         builder.addStatement("$T inState = (($T) input).state", stateType, implementation);
-        builder.addStatement("state.enableGroupIdTracking(new $T.Empty())", SEEN_GROUP_IDS);
         combineStates(builder);
         return builder.build();
     }
