@@ -239,6 +239,8 @@ public class MonitoringTemplateRegistry extends IndexTemplateRegistry {
             .orElseThrow(() -> new IllegalArgumentException("Invalid system [" + system + "]"));
     }
 
+    private final List<LifecyclePolicy> ilmPolicies;
+
     public MonitoringTemplateRegistry(
         Settings nodeSettings,
         ClusterService clusterService,
@@ -249,13 +251,13 @@ public class MonitoringTemplateRegistry extends IndexTemplateRegistry {
         super(nodeSettings, clusterService, threadPool, client, xContentRegistry);
         this.clusterService = clusterService;
         this.monitoringTemplatesEnabled = MONITORING_TEMPLATES_ENABLED.get(nodeSettings);
+        this.ilmPolicies = loadPolicies(nodeSettings);
     }
 
-    @Override
-    protected List<LifecyclePolicyConfig> getLifecycleConfigs() {
+    private List<LifecyclePolicy> loadPolicies(Settings nodeSettings) {
         Map<String, String> templateVars = new HashMap<>();
-        if (HISTORY_DURATION.exists(settings)) {
-            templateVars.put(MONITORING_POLICY_RETENTION_VARIABLE, HISTORY_DURATION.get(settings).getStringRep());
+        if (HISTORY_DURATION.exists(nodeSettings)) {
+            templateVars.put(MONITORING_POLICY_RETENTION_VARIABLE, HISTORY_DURATION.get(nodeSettings).getStringRep());
             templateVars.put(
                 MONITORING_POLICY_RETENTION_REASON_VARIABLE,
                 "the value of the [" + HISTORY_DURATION.getKey() + "] setting at node startup"
@@ -264,12 +266,9 @@ public class MonitoringTemplateRegistry extends IndexTemplateRegistry {
             templateVars.put(MONITORING_POLICY_RETENTION_VARIABLE, MONITORING_POLICY_DEFAULT_RETENTION);
             templateVars.put(MONITORING_POLICY_RETENTION_REASON_VARIABLE, "the monitoring plugin default");
         }
-        LifecyclePolicyConfig monitoringPolicy = new LifecyclePolicyConfig(
-            MONITORING_POLICY_NAME,
-            "/monitoring-mb-ilm-policy.json",
-            templateVars
-        );
-        return List.of(monitoringPolicy);
+        LifecyclePolicy monitoringPolicy = new LifecyclePolicyConfig(MONITORING_POLICY_NAME, "/monitoring-mb-ilm-policy.json", templateVars)
+            .load(LifecyclePolicyConfig.DEFAULT_X_CONTENT_REGISTRY);
+        return Collections.singletonList(monitoringPolicy);
     }
 
     @Override
@@ -319,9 +318,9 @@ public class MonitoringTemplateRegistry extends IndexTemplateRegistry {
     }
 
     @Override
-    protected List<LifecyclePolicy> getLifecyclePolicies() {
+    protected List<LifecyclePolicy> getPolicyConfigs() {
         if (monitoringTemplatesEnabled) {
-            return lifecyclePolicies;
+            return ilmPolicies;
         } else {
             return Collections.emptyList();
         }
